# multi-ai-agent

./: .gitignore  README.md  alembic.ini  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 88e23b00af44_add_response_to_intents.py  ddbf848a157d_add_response_to_intents.py
app/: __init__.py  config.py  create_table.py  database.py  db.py  main.py
app/agents/: image_agent.py  intent_detection_agent.py  text_agent.py
app/llm/: factory.py
app/models/: intent.py  user.py
app/routers/: __init__.py  auth.py  chat.py  detect_intent.py
app/routers.py/: chat.py
app/schema/: intent.py  user.py
app/utils/: auth.py  intent_detection.py
