[project]
name = "multi-agent-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Ravi"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=7.1.0,<8.0.0)"
]

[tool.poetry]
packages = [
    { include = "app" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
